--- a/DropdownMenu.html
+++ b/DropdownMenu.html
@@ -44,8 +44,8 @@
             <div id="notification">
                 
                 <div id="imgcontainer">
-                    <a href="https://github.com/apizzimenti/Open">
-                        <img src="https://dl.dropbox.com/s/ajla1dwvb9n0zf3/Large.png?dl=0" target="_blank" height="100" width="100" align="center"/>
+                    <a href="https://github.com/apizzimenti/Open" target="_blank">
+                        <img src="https://dl.dropbox.com/s/ajla1dwvb9n0zf3/Large.png?dl=0" height="100" width="100" align="center"/>
                     </a>
                 </div>
                 
